# keiba

./: .gitignore  AGENTS.md  README.md  check_db_connection.py  check_db_connection_windows.py  data  init_db.sql  init_mart.sql  pr_body.md  pyproject.toml  setup_postgres.sh  setup_postgres_multi.sh
.github/: pull_request_template.md
app/: main.py
docs/: DB構築ToDo.md  DB設計仕様書.md  ETL・パイプライン仕様書.md  data_design.md  future_improvements.md  jvlink_handover.md  system_specification.md  ダウンロードリスト.md  データ取得仕様書.md  データ品質レポート.md  データ辞書・正規化仕様書.md  全体仕様書.md  実装ギャップチェックリスト.md  実装特徴量一覧.md  検証設計仕様書.md  特徴量カタログ.md  特徴量仕様.md  進捗状況.md  運用仕様書.md  運用手順.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
migrations/: 0001_init_db.sql  0002_init_mart.sql  20260213_raw_dedup.sql  20260215_event_change_dedup.sql
migrations_v1/: 20260214_add_t5_runner_snapshot.sql  20260215_add_rt_mining_dm_tm.sql
migrations_v2/: 0001_init_db.sql  0002_expand_ingest_phase1.sql  0003_event_change_add_data_kbn.sql  0004_ensure_o3_tables.sql  0005_runner_add_code_columns.sql  0006_o1_place_timeseries.sql
scripts/: backfill_core_race.py  backfill_odds_final.py  backtest.py  backtest_kelly.py  build_dataset.py  build_features.py  build_t5_snapshot.py  check_ci.sh  check_dataset_quality.py  extract_jvlink.py  extract_race_subset.py  extract_rt_jvlink.py  load_to_db.py  market_features.py  ops_rt.py  ops_t5_dryrun.py  optimize_thresholds.py  predict.py  predict_t5.py  rt_common.py  train.py  train_production_bundle.py  train_walk_forward.py  verify_parsers.py
scripts_v1/: analyze_data.py  backfill_rt.py  backtest.py  backtest_v2.py  build_dataset_t5.py  extract_rt_jvlink.py  load_to_db.py  migrate.py  ops_race.py  ops_rt.py  ops_rt_load.py  ops_t5_dryrun.py  optimize_thresholds.py  predict.py  rt_common.py  t5_modeling.py
scripts_v2/: backfill_o1_place_from_raw_v2.py  backtest_wide_v2.py  bankroll_v2_common.py  build_features_v2.py  calibration_v2_common.py  diagnose_ranker_generalization_v2.py  eval_calibrator_holdout_v2.py  eval_ranker_stacker_holdout_compare_v2.py  eval_ranker_stacker_holdout_v2.py  load_to_db.py  migrate.py  ranker_stacking_v2_common.py  rebuild_payout_wide_from_raw_hr_v2.py  sweep_min_p_wide_threshold_v2.py  train_calibrator_v2.py  train_ranker_cat_v2.py  train_ranker_stacker_v2.py  train_ranker_v2.py  train_ranker_xgb_v2.py  tune_ranker_cat_optuna_v2.py  tune_ranker_optuna_v2.py  tune_ranker_stacker_optuna_v2.py  tune_ranker_xgb_optuna_v2.py  wide_prob_v2_common.py
scripts_v3/: backtest_wide_v3.py  build_features_v3.py  build_features_v3_te.py  cv_policy_v3.py  feature_registry_v3.py  odds_v3_common.py  pl_v3_common.py  predict_race_v3.py  train_binary_model_v3.py  train_pl_v3.py  (+16 more)
(+169 files in other folders)
