[project]
name = "python-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "psycopg[binary]>=3.2.1",
    "pywin32>=311; sys_platform == 'win32'",
    "lightgbm>=4.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.2.1",
    "tabulate>=0.9.0",
    "tqdm>=4.67.3",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
wandb = ["wandb>=0.19.0"]
optuna = ["optuna>=3.6.0"]
xgboost = ["xgboost>=2.0.0"]
catboost = ["catboost>=1.2.0"]
torch = ["torch>=2.4.0"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.14",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".venv32", "migrations_v1", "scripts_v1", "tests_v1"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"scripts_v2/*.py" = ["E402"]
"scripts_v3/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["test_v2", "test_v3"]
pythonpath = "."
addopts = "-q"
asyncio_mode = "auto"
